# lab3compi

./: CMakeLists.txt  a.out  ast.cpp  ast.h  parser.cpp  scanner.cpp  token.cpp  token.h  visitor.cpp  visitor.h
outputs/: output1.txt  output3.txt  output4.txt  output5.txt  output7.txt  tokens_10.txt  tokens_2.txt  tokens_3.txt  tokens_4.txt  tokens_5.txt  tokens_6.txt  tokens_7.txt  tokens_8.txt  tokens_9.txt
